--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# py caches
+**/__pycache__
+**/*.pyc
+
 /build
 /dist
 *.xlsx
