--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-beautifulsoup4==4.10.0
+attrs==21.4.0
+beautifulsoup4==4.11.1
+numpy==1.23.1
 pandas==1.2.4
-selenium==4.1.3
+selenium==4.3.0
 SQLAlchemy==1.4.32
+tqdm==4.64.0
 webdriver_manager==3.5.2
+xlsxwriter
